# interface-like-rs

./: Cargo.toml  README.md
dynamic-lib/: Cargo.toml
dynamic-lib/src/: lib.rs
logger/src/: lib.rs
src/: main.rs
static-lib/: Cargo.toml
static-lib/src/: lib.rs
